# chat-core

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  compose.dev.yaml  compose.yaml  diesel.toml  flake.nix  nginx.conf
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: login.rs
friend-service/: Cargo.toml  Dockerfile
friend-service/src/: friend.rs  routes.rs
migrations/2025-05-21-103036_create_users/: up.sql
migrations/2025-05-21-103113_create_groups/: up.sql
migrations/2025-05-21-103118_create_group_members/: up.sql
migrations/2025-06-06-110807_create_friendships/: down.sql  up.sql
migrations/2025-06-07-112347_create_friend_request/: down.sql
migrations/2025-06-07-112349_create_friend/: down.sql
profile-service/: Cargo.toml  Dockerfile
profile-service/src/: profile.rs
schema/mongo/: init.js
schema/postgres/: init.sql
services/auth/: Cargo.toml  Dockerfile  Dockerfile.dev
services/auth/src/: auth.rs  csrf.rs  jwt.rs  login.rs  logout.rs  main.rs  register.rs  routes.rs
services/friend/: Cargo.toml  Dockerfile  Dockerfile.dev
services/friend/src/: friend.rs  main.rs
services/init/: Cargo.toml  Dockerfile
services/init/migrations/2025-05-21-103036_create_users/: up.sql
services/init/migrations/2025-05-21-103118_create_group_members/: down.sql
services/init/migrations/2025-06-07-112347_create_friend_request/: up.sql
services/init/migrations/2025-06-07-112349_create_friend/: up.sql
services/profile/: Cargo.toml  Dockerfile  Dockerfile.dev
services/profile/src/: main.rs  profile.rs  routes.rs
shared/: Cargo.toml
shared/src/: csrf.rs  database.rs  lib.rs  models.rs  profile.rs  validate.rs
src/: lib.rs  main.rs  models.rs  schema.rs  server-http.rs  server-ws.rs  server.rs
src/actix/: mod.rs  routes.rs  start.rs
src/actix/api/: api.rs  csrf.rs  mod.rs
src/actix/auth/: example.rs  jwt.rs  login.rs  logout.rs  me.rs  mod.rs  register.rs
src/actix/csrf/: csrf.rs  mod.rs
src/database/: init.rs
src/db/: operations.rs
src/http/: mod.rs  routes.rs  start.rs
src/http/auth/: csrf.rs  jwt.rs  login.rs  logout.rs  mod.rs  register.rs
src/http/friend/: friend.rs  friendship.rs  mod.rs
src/http/profile/: mod.rs  profile.rs
src/services/: auth.rs  friend.rs  friendship.rs  jwt.rs  mod.rs  profile.rs  validate.rs
src/ws/: mod.rs  start.rs
