[package]
name = "chat-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
csrf = "0.5.0"
diesel = { version = "2.2.10", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.5.2", features = ["postgres", "pool", "deadpool"] }
dotenv = "0.15.0"
jsonwebtoken = "9"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["default", "connect", "handshake", "stream", "url"] }
tungstenite = "0.26.2"
url = "2"
uuid = { version = "1.17.0", features = ["v4"] }
