[package]
name = "shared"
version = "0.1.0"
authors = ["@koushicsumathikumar", "@lewisrye", "@taiseiyokoshima"]
edition = "2024"
description = "The backend of TKL Chat, made with Rust"
readme = "../README.md"
repository = "https://github.com/tkl-labs/chat-core"
license = "GPL-3.0"

[dependencies]
actix-web = "4.11.0"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
csrf = "0.5.0"
diesel = { version = "2.2.11", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.6.1", features = ["postgres", "pool", "deadpool"] }
dotenv = "0.15.0"
image = "0.25.6"
jsonwebtoken = "9"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
