[package]
name = "friend"
version = "0.1.0"
authors = ["@koushicsumathikumar", "@lewisrye"]
edition = "2024"
description = "The backend of TKL Chat, made with Rust"
readme = "../../README.md"
repository = "https://github.com/tkl-labs/chat-core"
license = "GPL-3.0"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.6.1", features = ["postgres", "pool", "deadpool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["serde", "v4"] }

shared = { path = "../../shared" }