[package]
name = "profile"
version = "0.1.0"
authors = ["@koushicsumathikumar", "@lewisrye", "@taiseiyokoshima"]
edition = "2024"
description = "The backend of TKL Chat, made with Rust"
readme = "../../README.md"
repository = "https://github.com/tkl-labs/chat-core"
license = "GPL-3.0"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["serde", "v4"] }

shared = { path = "../../shared" }